# News-Craft

./: README.md  pyproject.toml
news_craft/: app.py
news_craft/modules/: utils.py
script/: start_app.bat
tests/: test_utils.py
