[tool.poetry]
name = "news-craft"
version = "0.1"
description = "An automatic news writer AI bot"
authors = ["invictus-21 <ataturhan21@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "news_craft"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.2"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
langchain = "^0.0.352"
google-api-python-client = "^2.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
